# kiro-tools

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start.ps1  start.sh
.github/workflows/: ci.yml  release.yml
fixes/: improperly_formed_request_investigation.md
src/: constants.rs  main.rs  test_utils.rs
src/auth/: config.rs  kiro_auth.rs  mod.rs  types.rs
src/commands/: account_repair.rs  cloudflared.rs  mod.rs  proxy.rs  user_token.rs
src/locales/: en.json  tr.json  zh.json
src/models/: account.rs  config.rs  mod.rs  quota.rs  token.rs
src/modules/: account.rs  account_service.rs  cache.rs  cloudflared.rs  http_api.rs  integration.rs  log_bridge.rs  logger.rs  migration.rs  mod.rs  oauth.rs  proxy_db.rs  quota.rs  security_db.rs  token_stats.rs  update_checker.rs  user_token_db.rs
src/proxy/: concurrency_handlers.rs  config.rs  debug_logger.rs  http_client.rs  mod.rs  model_resolver.rs  monitor.rs  opencode_sync.rs  proxy_pool.rs  rate_limit.rs  redaction.rs  server.rs  session_manager.rs  token_manager.rs  tokenizer.rs
src/proxy/common/: errors.rs  mod.rs  model_mapping.rs
src/proxy/errors/: kiro_errors.rs  mod.rs  network_errors.rs
src/proxy/handlers/: claude.rs  kiro_upstream.rs  mod.rs
src/proxy/mappers/: mod.rs
src/proxy/middleware/: auth.rs  debug_logging.rs  mod.rs  monitor.rs
src/proxy/upstream/: mod.rs  model_cache.rs  parsers.rs  retry.rs  thinking_parser.rs  truncation.rs  utils.rs
src/utils/: crypto.rs  http.rs  mod.rs
tests/: stream_test.rs
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  main.tsx
webui/src/components/: UpdateNotification.tsx
webui/src/config/: modelConfig.ts
webui/src/hooks/: useProxyModels.tsx
webui/src/locales/: ar.json  en.json  es.json  ja.json  ko.json  my.json  pt.json  ru.json  tr.json  vi.json  zh-TW.json  (+1 more)
(+41 files in other folders)
