[package]
name = "kiro-tools"
version = "1.9.3"
description = "Kiro Tools - Standalone proxy server extracted from Antigravity Manager"
authors = ["you"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"

[[bin]]
name = "kiro-tools"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream", "socks", "blocking"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
image = { version = "0.25.9", default-features = false, features = ["png", "webp"] }
thiserror = "2.0.17"

# Proxy server dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
eventsource-stream = "0.2"
dashmap = "6.1"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
async-stream = "0.3.6"
regex = "1.12.2"
once_cell = "1.19"
pin-project = "1.1"
bytes = "1.5"
libc = "0.2"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
sha2 = "0.10"
toml = "0.8"
toml_edit = "0.22"
parking_lot = "0.12.5"
tokio-util = "0.7.18"
aes-gcm = "0.10.3"
machine-uid = "0.5.4"
plist = "1.7"
zeroize = { version = "1.8", features = ["derive"] }
shellexpand = "3.1.1"

[dev-dependencies]
tempfile = "3"
proptest = "1.4"
tokio-test = "0.4"
